--- a/illustration.html
+++ b/illustration.html
@@ -51,8 +51,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="illustration.html">illustrations</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sequential.html">sequential</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="lifedrawing.html">life drawing<br></a>
-                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">contact</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="illustration">illustrations</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sequential">sequential</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="lifedrawing">life drawing<br></a>
+                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact">contact</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/carsonrthorn" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
