--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
+                    <a href="index">
                         <img src="assets/images/banner.jpg" alt="Mobirise Website Builder" style="height: 4.9rem;">
                     </a>
                 </span>
